--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -1,6 +1,593 @@
 project(relive_lib VERSION 0.1 LANGUAGES CXX)
 
+SET(AliveLibSrcAO
+   ../AliveLibAO/Font.hpp
+   ../AliveLibAO/Font.cpp
+   ../AliveLibAO/Midi.hpp
+   ../AliveLibAO/Midi.cpp
+   ../AliveLibAO/Sfx.hpp
+   ../AliveLibAO/Sfx.cpp
+   ../AliveLibAO/Math.hpp
+   ../AliveLibAO/Math.cpp
+   ../AliveLibAO/Grid.cpp
+   ../AliveLibAO/Grid.hpp
+   ../AliveLibAO/StringFormatters.hpp
+   ../AliveLibAO/StringFormatters.cpp
+   ../AliveLibAO/BaseAliveGameObject.hpp
+   ../AliveLibAO/BaseAliveGameObject.cpp
+   ../AliveLibAO/GameAutoPlayer.cpp
+   ../AliveLibAO/GameAutoPlayer.hpp
+   ../AliveLibAO/PathDataExtensions.hpp
+   ../AliveLibAO/PathDataExtensions.cpp
+   ../AliveLibAO/Game.hpp
+   ../AliveLibAO/Game.cpp
+   ../AliveLibAO/Map.hpp
+   ../AliveLibAO/Map.cpp
+   ../AliveLibAO/Sound.hpp
+   ../AliveLibAO/Sound.cpp
+   ../AliveLibAO/SaveGame.hpp
+   ../AliveLibAO/SaveGame.cpp
+   ../AliveLibAO/CameraSwapper.hpp
+   ../AliveLibAO/CameraSwapper.cpp
+   ../AliveLibAO/Input.hpp
+   ../AliveLibAO/Input.cpp
+   ../AliveLibAO/PauseMenu.hpp
+   ../AliveLibAO/PauseMenu.cpp
+   ../AliveLibAO/Path.hpp
+   ../AliveLibAO/Path.cpp
+   ../AliveLibAO/DDCheat.hpp
+   ../AliveLibAO/DDCheat.cpp
+   ../AliveLibAO/DemoPlayback.hpp
+   ../AliveLibAO/DemoPlayback.cpp
+   ../AliveLibAO/SwitchStateBooleanLogic.hpp
+   ../AliveLibAO/SwitchStateBooleanLogic.cpp
+   ../AliveLibAO/OneShotSwitchIdSetter.hpp
+   ../AliveLibAO/OneShotSwitchIdSetter.cpp
+   ../AliveLibAO/GameEnderController.hpp
+   ../AliveLibAO/GameEnderController.cpp
+   ../AliveLibAO/MovingBomb.hpp
+   ../AliveLibAO/MovingBomb.cpp
+   ../AliveLibAO/ScreenWave.hpp
+   ../AliveLibAO/ScreenWave.cpp
+   ../AliveLibAO/UXB.hpp
+   ../AliveLibAO/UXB.cpp
+   ../AliveLibAO/LCDScreen.hpp
+   ../AliveLibAO/LCDScreen.cpp
+   ../AliveLibAO/MainMenu.hpp
+   ../AliveLibAO/MainMenu.cpp
+   ../AliveLibAO/MainMenuTransition.hpp
+   ../AliveLibAO/MainMenuTransition.cpp
+   ../AliveLibAO/Mine.hpp
+   ../AliveLibAO/Mine.cpp
+   ../AliveLibAO/Door.hpp
+   ../AliveLibAO/Door.cpp
+   ../AliveLibAO/HintFly.hpp
+   ../AliveLibAO/HintFly.cpp
+   ../AliveLibAO/SnoozeParticle.hpp
+   ../AliveLibAO/SnoozeParticle.cpp
+   ../AliveLibAO/ScopedSeq.hpp
+   ../AliveLibAO/ScopedSeq.cpp
+   ../AliveLibAO/TrapDoor.hpp
+   ../AliveLibAO/TrapDoor.cpp
+   ../AliveLibAO/MeatSaw.hpp
+   ../AliveLibAO/MeatSaw.cpp
+   ../AliveLibAO/Grenade.hpp
+   ../AliveLibAO/Grenade.cpp
+   ../AliveLibAO/FlintLockFire.hpp
+   ../AliveLibAO/FlintLockFire.cpp
+   ../AliveLibAO/SlingMudokon.hpp
+   ../AliveLibAO/SlingMudokon.cpp
+   ../AliveLibAO/Mudokon.hpp
+   ../AliveLibAO/Mudokon.cpp
+   ../AliveLibAO/Slig.hpp
+   ../AliveLibAO/Slig.cpp
+   ../AliveLibAO/Slog.hpp
+   ../AliveLibAO/Slog.cpp
+   ../AliveLibAO/Scrab.hpp
+   ../AliveLibAO/Scrab.cpp
+   ../AliveLibAO/Paramite.hpp
+   ../AliveLibAO/Paramite.cpp
+   ../AliveLibAO/LCDStatusBoard.hpp
+   ../AliveLibAO/LCDStatusBoard.cpp
+   ../AliveLibAO/ParamiteWeb.hpp
+   ../AliveLibAO/ParamiteWeb.cpp
+   ../AliveLibAO/ZapLine.hpp
+   ../AliveLibAO/ZapLine.cpp
+   ../AliveLibAO/Shrykull.hpp
+   ../AliveLibAO/Shrykull.cpp
+   ../AliveLibAO/GasEmitter.hpp
+   ../AliveLibAO/GasEmitter.cpp
+   ../AliveLibAO/BoomMachine.hpp
+   ../AliveLibAO/BoomMachine.cpp
+   ../AliveLibAO/DeathGas.hpp
+   ../AliveLibAO/DeathGas.cpp
+   ../AliveLibAO/DoorFlame.hpp
+   ../AliveLibAO/DoorFlame.cpp
+   ../AliveLibAO/SlogSpawner.hpp
+   ../AliveLibAO/SlogSpawner.cpp
+   ../AliveLibAO/AbilityRing.hpp
+   ../AliveLibAO/AbilityRing.cpp
+   ../AliveLibAO/BirdPortal.hpp
+   ../AliveLibAO/BirdPortal.cpp
+   ../AliveLibAO/ZzzSpawner.hpp
+   ../AliveLibAO/ZzzSpawner.cpp
+   ../AliveLibAO/OrbWhirlWindParticle.hpp
+   ../AliveLibAO/OrbWhirlWindParticle.cpp
+   ../AliveLibAO/OrbWhirlWind.hpp
+   ../AliveLibAO/OrbWhirlWind.cpp
+   ../AliveLibAO/Well.hpp
+   ../AliveLibAO/Well.cpp
+   ../AliveLibAO/Throwable.hpp
+   ../AliveLibAO/Throwable.cpp
+   ../AliveLibAO/Rock.hpp
+   ../AliveLibAO/Rock.cpp
+   ../AliveLibAO/RockSack.hpp
+   ../AliveLibAO/RockSack.cpp
+   ../AliveLibAO/BackgroundGlukkon.hpp
+   ../AliveLibAO/BackgroundGlukkon.cpp
+   ../AliveLibAO/ThrowableTotalIndicator.hpp
+   ../AliveLibAO/ThrowableTotalIndicator.cpp
+   ../AliveLibAO/CircularFade.hpp
+   ../AliveLibAO/CircularFade.cpp
+   ../AliveLibAO/SecurityDoor.hpp
+   ../AliveLibAO/SecurityDoor.cpp
+   ../AliveLibAO/GroundExplosion.hpp
+   ../AliveLibAO/GroundExplosion.cpp
+   ../AliveLibAO/Lever.hpp
+   ../AliveLibAO/Lever.cpp
+   ../AliveLibAO/RollingBall.hpp
+   ../AliveLibAO/RollingBall.cpp
+   ../AliveLibAO/Leaf.hpp
+   ../AliveLibAO/Leaf.cpp
+   ../AliveLibAO/DeathBirdParticle.hpp
+   ../AliveLibAO/DeathBirdParticle.cpp
+   ../AliveLibAO/PossessionFlicker.hpp
+   ../AliveLibAO/PossessionFlicker.cpp
+   ../AliveLibAO/HoistRocksEffect.hpp
+   ../AliveLibAO/HoistRocksEffect.cpp
+   ../AliveLibAO/FootSwitch.hpp
+   ../AliveLibAO/FootSwitch.cpp
+   ../AliveLibAO/FallingItem.hpp
+   ../AliveLibAO/FallingItem.cpp
+   ../AliveLibAO/ParticleBurst.hpp
+   ../AliveLibAO/ParticleBurst.cpp
+   ../AliveLibAO/InvisibleSwitch.hpp
+   ../AliveLibAO/InvisibleSwitch.cpp
+   ../AliveLibAO/Rope.hpp
+   ../AliveLibAO/Rope.cpp
+   ../AliveLibAO/PullRingRope.hpp
+   ../AliveLibAO/PullRingRope.cpp
+   ../AliveLibAO/BulletShell.hpp
+   ../AliveLibAO/BulletShell.cpp
+   ../AliveLibAO/TimerTrigger.hpp
+   ../AliveLibAO/TimerTrigger.cpp
+   ../AliveLibAO/BellSong.hpp
+   ../AliveLibAO/BellSong.cpp
+   ../AliveLibAO/HoneySack.hpp
+   ../AliveLibAO/HoneySack.cpp
+   ../AliveLibAO/Honey.hpp
+   ../AliveLibAO/Honey.cpp
+   ../AliveLibAO/HoneyDrip.hpp
+   ../AliveLibAO/HoneyDrip.cpp
+   ../AliveLibAO/BeeNest.hpp
+   ../AliveLibAO/BeeNest.cpp
+   ../AliveLibAO/BeeSwarmHole.hpp
+   ../AliveLibAO/BeeSwarmHole.cpp
+   ../AliveLibAO/BeeSwarm.hpp
+   ../AliveLibAO/BeeSwarm.cpp
+   ../AliveLibAO/Fade.hpp
+   ../AliveLibAO/Fade.cpp
+   ../AliveLibAO/Gibs.hpp
+   ../AliveLibAO/Gibs.cpp
+   ../AliveLibAO/ScreenShake.hpp
+   ../AliveLibAO/ScreenShake.cpp
+   ../AliveLibAO/AirExplosion.hpp
+   ../AliveLibAO/AirExplosion.cpp
+   ../AliveLibAO/MotionDetector.hpp
+   ../AliveLibAO/MotionDetector.cpp
+   ../AliveLibAO/SecurityClaw.hpp
+   ../AliveLibAO/SecurityClaw.cpp
+   ../AliveLibAO/SecurityOrb.hpp
+   ../AliveLibAO/SecurityOrb.cpp
+   ../AliveLibAO/Electrocute.hpp
+   ../AliveLibAO/Electrocute.cpp
+   ../AliveLibAO/MusicTrigger.hpp
+   ../AliveLibAO/MusicTrigger.cpp
+   ../AliveLibAO/Dove.hpp
+   ../AliveLibAO/Dove.cpp
+   ../AliveLibAO/ElectricWall.hpp
+   ../AliveLibAO/ElectricWall.cpp
+   ../AliveLibAO/Meat.hpp
+   ../AliveLibAO/Meat.cpp
+   ../AliveLibAO/MeatSack.hpp
+   ../AliveLibAO/MeatSack.cpp
+   ../AliveLibAO/CreditsController.hpp
+   ../AliveLibAO/CreditsController.cpp
+   ../AliveLibAO/ScreenClipper.hpp
+   ../AliveLibAO/ScreenClipper.cpp
+   ../AliveLibAO/Bells.hpp
+   ../AliveLibAO/Bells.cpp
+   ../AliveLibAO/ChimeLock.hpp
+   ../AliveLibAO/ChimeLock.cpp
+   ../AliveLibAO/ZapSpark.hpp
+   ../AliveLibAO/ZapSpark.cpp
+   ../AliveLibAO/Spark.hpp
+   ../AliveLibAO/Spark.cpp
+   ../AliveLibAO/Bullet.hpp
+   ../AliveLibAO/Bullet.cpp
+   ../AliveLibAO/PlatformBase.hpp
+   ../AliveLibAO/PlatformBase.cpp
+   ../AliveLibAO/LiftPoint.hpp
+   ../AliveLibAO/LiftPoint.cpp
+   ../AliveLibAO/TimedMine.hpp
+   ../AliveLibAO/TimedMine.cpp
+   ../AliveLibAO/Blood.hpp
+   ../AliveLibAO/Blood.cpp
+   ../AliveLibAO/LightEffect.hpp
+   ../AliveLibAO/LightEffect.cpp
+   ../AliveLibAO/DoorLight.hpp
+   ../AliveLibAO/DoorLight.cpp
+   ../AliveLibAO/BackgroundAnimation.hpp
+   ../AliveLibAO/BackgroundAnimation.cpp
+   ../AliveLibAO/LiftMover.hpp
+   ../AliveLibAO/LiftMover.cpp
+   ../AliveLibAO/BellHammer.hpp
+   ../AliveLibAO/BellHammer.cpp
+   ../AliveLibAO/Bat.hpp
+   ../AliveLibAO/Bat.cpp
+   ../AliveLibAO/Slig.hpp
+   ../AliveLibAO/Slig.cpp
+   ../AliveLibAO/SligSpawner.hpp
+   ../AliveLibAO/SligSpawner.cpp
+   ../AliveLibAO/Alarm.hpp
+   ../AliveLibAO/Alarm.cpp
+   ../AliveLibAO/PathData.hpp
+   ../AliveLibAO/PathData.cpp
+   ../AliveLibAO/AnimationCallBacks.cpp
+   ../AliveLibAO/AnimationCallBacks.hpp
+   ../AliveLibAO/ResourceManager.hpp
+   ../AliveLibAO/ResourceManager.cpp
+   ../AliveLibAO/Factory.hpp
+   ../AliveLibAO/Factory.cpp
+   ../AliveLibAO/GasCountDown.hpp
+   ../AliveLibAO/GasCountDown.cpp
+   ../AliveLibAO/AmbientSound.hpp
+   ../AliveLibAO/AmbientSound.cpp
+   ../AliveLibAO/Movie.hpp
+   ../AliveLibAO/Movie.cpp
+   ../AliveLibAO/BackgroundMusic.hpp
+   ../AliveLibAO/BackgroundMusic.cpp
+   ../AliveLibAO/MusicController.hpp
+   ../AliveLibAO/MusicController.cpp
+   ../AliveLibAO/CheatController.hpp
+   ../AliveLibAO/CheatController.cpp
+   ../AliveLibAO/GameSpeak.hpp
+   ../AliveLibAO/GameSpeak.cpp
+   ../AliveLibAO/Abe.hpp
+   ../AliveLibAO/Abe.cpp
+   ../AliveLibAO/RollingBallStopper.hpp
+   ../AliveLibAO/RollingBallStopper.cpp
+   ../AliveLibAO/ThrowableArray.hpp
+   ../AliveLibAO/ThrowableArray.cpp
+   ../AliveLibAO/Elum.hpp
+   ../AliveLibAO/Elum.cpp
+   ../AliveLibAO/ZBall.hpp
+   ../AliveLibAO/ZBall.cpp
+   ../AliveLibAO/RollingBallShaker.hpp
+   ../AliveLibAO/RollingBallShaker.cpp
+)
+
+SET(AliveLibAESrc
+    ../AliveLibAE/Grid.hpp
+    ../AliveLibAE/Grid.cpp
+    ../AliveLibAE/GameAutoPlayer.hpp
+    ../AliveLibAE/GameAutoPlayer.cpp
+    ../AliveLibAE/PathDataExtensions.cpp
+    ../AliveLibAE/PathDataExtensions.hpp
+    ../AliveLibAE/Input.cpp
+    ../AliveLibAE/Input.hpp
+    ../AliveLibAE/VGA.cpp
+    ../AliveLibAE/VGA.hpp
+    ../AliveLibAE/PsxRender.cpp
+    ../AliveLibAE/PsxRender.hpp
+    ../AliveLibAE/Math.cpp
+    ../AliveLibAE/Math.hpp
+    ../AliveLibAE/GameSpeak.hpp
+    ../AliveLibAE/GameSpeak.cpp
+    ../AliveLibAE/DDCheat.hpp
+    ../AliveLibAE/DDCheat.cpp
+    ../AliveLibAE/Sfx.hpp
+    ../AliveLibAE/Sfx.cpp
+    ../AliveLibAE/Game.cpp
+    ../AliveLibAE/Game.hpp
+    ../AliveLibAE/stdlib.cpp
+    ../AliveLibAE/stdlib.hpp
+    ../AliveLibAE/AmbientSound.cpp
+    ../AliveLibAE/AmbientSound.hpp
+    ../AliveLibAE/ResourceManager.cpp
+    ../AliveLibAE/ResourceManager.hpp
+    ../AliveLibAE/BaseAliveGameObject.cpp
+    ../AliveLibAE/BaseAliveGameObject.hpp
+    ../AliveLibAE/CreditsController.cpp
+    ../AliveLibAE/CreditsController.hpp
+    ../AliveLibAE/PauseMenu.cpp
+    ../AliveLibAE/PauseMenu.hpp
+    ../AliveLibAE/Map.cpp
+    ../AliveLibAE/Map.hpp
+    ../AliveLibAE/AnimationCallBacks.cpp
+    ../AliveLibAE/AnimationCallBacks.hpp
+    ../AliveLibAE/BackgroundAnimation.cpp
+    ../AliveLibAE/BackgroundAnimation.hpp
+    ../AliveLibAE/PathData.cpp
+    ../AliveLibAE/PathData.hpp
+    ../AliveLibAE/Io.cpp
+    ../AliveLibAE/Io.hpp
+    ../AliveLibAE/Resources.hpp
+    ../AliveLibAE/Resources.cpp
+    ../AliveLibAE/Font.hpp
+    ../AliveLibAE/Font.cpp
+    ../AliveLibAE/StringFormatters.hpp
+    ../AliveLibAE/StringFormatters.cpp
+    ../AliveLibAE/Abe.hpp
+    ../AliveLibAE/Abe.cpp
+    ../AliveLibAE/MusicController.hpp
+    ../AliveLibAE/MusicController.cpp
+    ../AliveLibAE/BackgroundMusic.hpp
+    ../AliveLibAE/BackgroundMusic.cpp
+    ../AliveLibAE/Path.hpp
+    ../AliveLibAE/Path.cpp
+    ../AliveLibAE/QuikSave.hpp
+    ../AliveLibAE/QuikSave.cpp
+    ../AliveLibAE/Factory.hpp
+    ../AliveLibAE/Factory.cpp
+    ../AliveLibAE/MainMenu.hpp
+    ../AliveLibAE/MainMenu.cpp
+    ../AliveLibAE/LCDScreen.hpp
+    ../AliveLibAE/LCDScreen.cpp
+    ../AliveLibAE/LCDStatusBoard.hpp
+    ../AliveLibAE/LCDStatusBoard.cpp
+    ../AliveLibAE/CheatController.hpp
+    ../AliveLibAE/CheatController.cpp
+    ../AliveLibAE/Compression.hpp
+    ../AliveLibAE/Compression.cpp
+    ../AliveLibAE/Movie.hpp
+    ../AliveLibAE/Movie.cpp
+    ../AliveLibAE/CameraSwapper.cpp
+    ../AliveLibAE/CameraSwapper.hpp
+    ../AliveLibAE/MainMenuTransition.hpp
+    ../AliveLibAE/MainMenuTransition.cpp
+    ../AliveLibAE/Text.cpp
+    ../AliveLibAE/Text.hpp
+    ../AliveLibAE/ThrowableArray.cpp
+    ../AliveLibAE/ThrowableArray.hpp
+    ../AliveLibAE/UXB.cpp
+    ../AliveLibAE/UXB.hpp
+    ../AliveLibAE/Mine.cpp
+    ../AliveLibAE/Mine.hpp
+    ../AliveLibAE/TimedMine.cpp
+    ../AliveLibAE/TimedMine.hpp
+    ../AliveLibAE/TrapDoor.cpp
+    ../AliveLibAE/TrapDoor.hpp
+    ../AliveLibAE/MusicTrigger.cpp
+    ../AliveLibAE/MusicTrigger.hpp
+    ../AliveLibAE/ScreenShake.cpp
+    ../AliveLibAE/ScreenShake.hpp
+    ../AliveLibAE/InvisibleEffect.cpp
+    ../AliveLibAE/InvisibleEffect.hpp
+    ../AliveLibAE/Gibs.cpp
+    ../AliveLibAE/Gibs.hpp
+    ../AliveLibAE/Throwable.cpp
+    ../AliveLibAE/Throwable.hpp
+    ../AliveLibAE/ThrowableTotalIndicator.hpp
+    ../AliveLibAE/ThrowableTotalIndicator.cpp
+    ../AliveLibAE/AbilityRing.cpp
+    ../AliveLibAE/AbilityRing.hpp
+    ../AliveLibAE/OrbWhirlWind.cpp
+    ../AliveLibAE/OrbWhirlWind.hpp
+    ../AliveLibAE/OrbWhirlWindParticle.cpp
+    ../AliveLibAE/OrbWhirlWindParticle.hpp
+    ../AliveLibAE/Blood.cpp
+    ../AliveLibAE/Blood.hpp
+    ../AliveLibAE/PullRingRope.hpp
+    ../AliveLibAE/PullRingRope.cpp
+    ../AliveLibAE/HoistRocksEffect.hpp
+    ../AliveLibAE/HoistRocksEffect.cpp
+    ../AliveLibAE/CircularFade.hpp
+    ../AliveLibAE/CircularFade.cpp
+    ../AliveLibAE/Alarm.hpp
+    ../AliveLibAE/Alarm.cpp
+    ../AliveLibAE/Fade.hpp
+    ../AliveLibAE/Fade.cpp
+    ../AliveLibAE/PossessionFlicker.hpp
+    ../AliveLibAE/PossessionFlicker.cpp
+    ../AliveLibAE/Door.hpp
+    ../AliveLibAE/Door.cpp
+    ../AliveLibAE/DeathBirdParticle.hpp
+    ../AliveLibAE/DeathBirdParticle.cpp
+    ../AliveLibAE/Dove.hpp
+    ../AliveLibAE/Dove.cpp
+    ../AliveLibAE/WorkWheel.hpp
+    ../AliveLibAE/WorkWheel.cpp
+    ../AliveLibAE/StatusLight.hpp
+    ../AliveLibAE/StatusLight.cpp
+    ../AliveLibAE/WheelSyncer.hpp
+    ../AliveLibAE/WheelSyncer.cpp
+    ../AliveLibAE/LevelLoader.hpp
+    ../AliveLibAE/LevelLoader.cpp
+    ../AliveLibAE/InvisibleSwitch.hpp
+    ../AliveLibAE/InvisibleSwitch.cpp
+    ../AliveLibAE/Lever.hpp
+    ../AliveLibAE/Lever.cpp
+    ../AliveLibAE/MultiSwitchController.hpp
+    ../AliveLibAE/MultiSwitchController.cpp
+    ../AliveLibAE/Drill.cpp
+    ../AliveLibAE/Drill.hpp
+    ../AliveLibAE/Teleporter.cpp
+    ../AliveLibAE/Teleporter.hpp
+    ../AliveLibAE/Spark.cpp
+    ../AliveLibAE/Spark.hpp
+    ../AliveLibAE/SlamDoor.hpp
+    ../AliveLibAE/SlamDoor.cpp
+    ../AliveLibAE/Leaf.hpp
+    ../AliveLibAE/Leaf.cpp
+    ../AliveLibAE/Well.hpp
+    ../AliveLibAE/Well.cpp
+    ../AliveLibAE/Water.hpp
+    ../AliveLibAE/Water.cpp
+    ../AliveLibAE/Rope.hpp
+    ../AliveLibAE/Rope.cpp
+    ../AliveLibAE/PlatformBase.hpp
+    ../AliveLibAE/PlatformBase.cpp
+    ../AliveLibAE/LiftPoint.cpp
+    ../AliveLibAE/LiftPoint.hpp
+    ../AliveLibAE/LiftMover.cpp
+    ../AliveLibAE/LiftMover.hpp
+    ../AliveLibAE/TimerTrigger.cpp
+    ../AliveLibAE/TimerTrigger.hpp
+    ../AliveLibAE/FootSwitch.cpp
+    ../AliveLibAE/FootSwitch.hpp
+    ../AliveLibAE/ParticleBurst.cpp
+    ../AliveLibAE/ParticleBurst.hpp
+    ../AliveLibAE/BrewMachine.cpp
+    ../AliveLibAE/BrewMachine.hpp
+    ../AliveLibAE/FallingItem.cpp
+    ../AliveLibAE/FallingItem.hpp
+    ../AliveLibAE/MineCar.cpp
+    ../AliveLibAE/MineCar.hpp
+    ../AliveLibAE/GroundExplosion.cpp
+    ../AliveLibAE/GroundExplosion.hpp
+    ../AliveLibAE/ElectricWall.cpp
+    ../AliveLibAE/ElectricWall.hpp
+    ../AliveLibAE/Electrocute.cpp
+    ../AliveLibAE/Electrocute.hpp
+    ../AliveLibAE/EvilFart.cpp
+    ../AliveLibAE/EvilFart.hpp
+    ../AliveLibAE/GasEmitter.cpp
+    ../AliveLibAE/GasEmitter.hpp
+    ../AliveLibAE/DemoPlayback.cpp
+    ../AliveLibAE/DemoPlayback.hpp
+    ../AliveLibAE/SecurityOrb.cpp
+    ../AliveLibAE/SecurityOrb.hpp
+    ../AliveLibAE/AirExplosion.hpp
+    ../AliveLibAE/AirExplosion.cpp
+    ../AliveLibAE/Greeter.hpp
+    ../AliveLibAE/Greeter.cpp
+    ../AliveLibAE/ZapLine.hpp
+    ../AliveLibAE/ZapLine.cpp
+    ../AliveLibAE/MotionDetector.hpp
+    ../AliveLibAE/MotionDetector.cpp
+    ../AliveLibAE/Slurg.cpp
+    ../AliveLibAE/Slurg.hpp
+    ../AliveLibAE/SlurgSpawner.cpp
+    ../AliveLibAE/SlurgSpawner.hpp
+    ../AliveLibAE/FlyingSlig.cpp
+    ../AliveLibAE/FlyingSlig.hpp
+    ../AliveLibAE/FlyingSligSpawner.cpp
+    ../AliveLibAE/FlyingSligSpawner.hpp
+    ../AliveLibAE/Mudokon.cpp
+    ../AliveLibAE/Mudokon.hpp
+    ../AliveLibAE/BirdPortal.cpp
+    ../AliveLibAE/BirdPortal.hpp
+    ../AliveLibAE/TorturedMudokon.cpp
+    ../AliveLibAE/TorturedMudokon.hpp
+    ../AliveLibAE/DoorBlocker.cpp
+    ../AliveLibAE/DoorBlocker.hpp
+    ../AliveLibAE/SlapLock.cpp
+    ../AliveLibAE/SlapLock.hpp
+    ../AliveLibAE/SlapLockWhirlWind.cpp
+    ../AliveLibAE/SlapLockWhirlWind.hpp
+    ../AliveLibAE/Glukkon.cpp
+    ../AliveLibAE/Glukkon.hpp
+    ../AliveLibAE/ScreenClipper.cpp
+    ../AliveLibAE/ScreenClipper.hpp
+    ../AliveLibAE/MovingBomb.hpp
+    ../AliveLibAE/MovingBomb.cpp
+    ../AliveLibAE/DoorFlame.cpp
+    ../AliveLibAE/DoorFlame.hpp
+    ../AliveLibAE/CrawlingSlig.cpp
+    ../AliveLibAE/CrawlingSlig.hpp
+    ../AliveLibAE/SnoozeParticle.cpp
+    ../AliveLibAE/SnoozeParticle.hpp
+    ../AliveLibAE/Fleech.cpp
+    ../AliveLibAE/Fleech.hpp
+    ../AliveLibAE/Scrab.cpp
+    ../AliveLibAE/Scrab.hpp
+    ../AliveLibAE/Paramite.hpp
+    ../AliveLibAE/Paramite.cpp
+    ../AliveLibAE/Slog.hpp
+    ../AliveLibAE/Slog.cpp
+    ../AliveLibAE/Slig.hpp
+    ../AliveLibAE/Slig.cpp
+    ../AliveLibAE/GasCountDown.hpp
+    ../AliveLibAE/GasCountDown.cpp
+    ../AliveLibAE/GlukkonSwitch.hpp
+    ../AliveLibAE/GlukkonSwitch.cpp
+    ../AliveLibAE/Bullet.hpp
+    ../AliveLibAE/Bullet.cpp
+    ../AliveLibAE/CrawlingSligButton.hpp
+    ../AliveLibAE/CrawlingSligButton.cpp
+    ../AliveLibAE/SligGetPantsAndWings.hpp
+    ../AliveLibAE/SligGetPantsAndWings.cpp
+    ../AliveLibAE/BoomMachine.hpp
+    ../AliveLibAE/BoomMachine.cpp
+    ../AliveLibAE/Meat.hpp
+    ../AliveLibAE/Meat.cpp
+    ../AliveLibAE/MeatSack.hpp
+    ../AliveLibAE/MeatSack.cpp
+    ../AliveLibAE/Grenade.hpp
+    ../AliveLibAE/Grenade.cpp
+    ../AliveLibAE/Bone.hpp
+    ../AliveLibAE/Bone.cpp
+    ../AliveLibAE/BoneBag.hpp
+    ../AliveLibAE/BoneBag.cpp
+    ../AliveLibAE/Rock.hpp
+    ../AliveLibAE/Rock.cpp
+    ../AliveLibAE/RockSack.hpp
+    ../AliveLibAE/RockSack.cpp
+    ../AliveLibAE/BulletShell.hpp
+    ../AliveLibAE/BulletShell.cpp
+    ../AliveLibAE/SligSpawner.hpp
+    ../AliveLibAE/SligSpawner.cpp
+    ../AliveLibAE/ScrabSpawner.hpp
+    ../AliveLibAE/ScrabSpawner.cpp
+    ../AliveLibAE/SlogSpawner.hpp
+    ../AliveLibAE/SlogSpawner.cpp
+    ../AliveLibAE/ZzzSpawner.hpp
+    ../AliveLibAE/ZzzSpawner.cpp
+    ../AliveLibAE/GameEnderController.hpp
+    ../AliveLibAE/GameEnderController.cpp
+    ../AliveLibAE/Shrykull.hpp
+    ../AliveLibAE/Shrykull.cpp
+    ../AliveLibAE/ParamiteWeb.hpp
+    ../AliveLibAE/ParamiteWeb.cpp
+    ../AliveLibAE/ParamiteWebLine.hpp
+    ../AliveLibAE/ParamiteWebLine.cpp
+    ../AliveLibAE/ExplosionSet.hpp
+    ../AliveLibAE/ExplosionSet.cpp
+    ../AliveLibAE/ColourfulMeter.hpp
+    ../AliveLibAE/ColourfulMeter.cpp
+    ../AliveLibAE/MinesAlarm.hpp
+    ../AliveLibAE/MinesAlarm.cpp
+    ../AliveLibAE/SecurityDoor.cpp
+    ../AliveLibAE/SecurityDoor.hpp
+    ../AliveLibAE/LaughingGas.cpp
+    ../AliveLibAE/LaughingGas.hpp
+    ../AliveLibAE/DeathGas.cpp
+    ../AliveLibAE/DeathGas.hpp
+    ../AliveLibAE/ScopedSeq.cpp
+    ../AliveLibAE/ScopedSeq.hpp
+    ../AliveLibAE/ZapSpark.hpp
+    ../AliveLibAE/ZapSpark.cpp
+)
+
 SET(relive_lib_src
+    # because relive_lib uses some parts of AliveLibAE and 
+    # AliveLibAO it means they have to be compiled as a single lib
+    # this can be changed back once the bottom level classes are made common
+    # and only the per game objects live in the AO/AE libs
+    ${AliveLibAESrc}
+    ${AliveLibSrcAO}
+
     # temp hack to use these bits of the api for the data conversion
     ../Tools/relive_api/Base64.cpp
     ../Tools/relive_api/CamConverter.cpp
