--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,8 +95,8 @@ endif()
 
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/3rdParty)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Source/relive_lib)
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Source/AliveLibAO)
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Source/AliveLibAE)
+#add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Source/AliveLibAO)
+#add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Source/AliveLibAE)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Source/relive)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Source/Tools/vab_tool)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Source/Tools/relive_api)
@@ -111,8 +111,8 @@ set_target_properties(imgui         PROPERTIES UNITY_BUILD ON)
 
 # Disable for now because it breaks alivehook manager by setting unity_XX 
 # to always be the "group"
-set_target_properties(AliveLibAE     PROPERTIES UNITY_BUILD OFF)
-set_target_properties(AliveLibAO     PROPERTIES UNITY_BUILD OFF)
+#set_target_properties(AliveLibAE     PROPERTIES UNITY_BUILD OFF)
+#set_target_properties(AliveLibAO     PROPERTIES UNITY_BUILD OFF)
 set_target_properties(relive         PROPERTIES UNITY_BUILD OFF)
 
 set_target_properties(relive_api      PROPERTIES UNITY_BUILD OFF) # too big
@@ -139,15 +139,15 @@ endif()
 # AE needs its own PCH that can be reused from `AliveLibCommon`, because they
 # both define the same values for `BEHAVIOUR_CHANGE_SUB_DATA_FOLDERS`, and `_CRT_SECURE_NO_WARNINGS'
 
-target_precompile_headers(
-    AliveLibAE PRIVATE
-    "${CMAKE_CURRENT_SOURCE_DIR}/Source/relive_lib/pch_shared.h"
-)
+#target_precompile_headers(
+#    AliveLibAE PRIVATE
+#    "${CMAKE_CURRENT_SOURCE_DIR}/Source/relive_lib/pch_shared.h"
+#)
 # AO needs its own PCH because of different `BEHAVIOUR_CHANGE_SUB_DATA_FOLDERS` defines with `AliveLibCommon`
-target_precompile_headers(
-    AliveLibAO PRIVATE
-    "${CMAKE_CURRENT_SOURCE_DIR}/Source/relive_lib/pch_shared.h"
-)
+#target_precompile_headers(
+#    AliveLibAO PRIVATE
+#    "${CMAKE_CURRENT_SOURCE_DIR}/Source/relive_lib/pch_shared.h"
+#)
 
 #target_precompile_headers(relive_api_integration_test REUSE_FROM AliveLibAO)
 target_precompile_headers(
@@ -185,8 +185,8 @@ target_precompile_headers(
 # -----------------------------------------------------------------------------
 
 add_dependencies(relive_lib UpdateConfigHeader)
-add_dependencies(AliveLibAO UpdateConfigHeader)
-add_dependencies(AliveLibAE UpdateConfigHeader)
+#add_dependencies(AliveLibAO UpdateConfigHeader)
+#add_dependencies(AliveLibAE UpdateConfigHeader)
 
 if(WIN32)
     # On Windows generate ZIP packages
